// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be presented as one of the allowed variants 1`] = `
<button
  class="sc-beqWaB gUOGma"
  type="button"
>
  <span
    class="sc-gueYoa htAACu"
  >
    Submit
  </span>
</button>
`;

exports[`Button can be presented as one of the new allowed variants 1`] = `
<button
  class="sc-beqWaB fPqcah"
  type="button"
>
  <span
    class="sc-gueYoa bJKfsr"
  >
    Submit
  </span>
</button>
`;

exports[`Button renders 1`] = `
<button
  class="sc-beqWaB jIRSqr"
  type="button"
>
  <span
    class="sc-gueYoa htAACu"
  >
    Submit
  </span>
</button>
`;
